# http-remote-pc-control

./: .eslintrc.json  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  a.js  a.ts  esbuild.config.js  gen-cert.sh  jest.config.ts  native.js  package.json  san.cnf  sea-config.json  test-native-api.js  tsconfig.json
.github/workflows/: build.yaml  build.yml  cache.yml  client-build.yaml  client-deploy.yaml  client-pr.yaml  pr.yaml  release.yaml  server-build.yaml  server-deploy.yaml  server-pr.yaml  test.yaml  test.yml  test1.yml
arch/: PKGBUILD  http-remote-pc-control.service
client/: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  binding.gyp  index.js  nest.json  package.json  tsconfig.json
client/src/: main.ts
client/src/app/: app-controller.ts  app.module.ts  custom-logger.ts  logger-module.ts
client/src/auth/: auth.module.ts  jwt.strategy.ts  keys-service.ts  public_key.pem  roles.guard.ts
client/src/event/: app-controller.ts  app.module.ts  event-controller.ts  event-dto.ts  event-nut-types.ts  event.module.ts  execution.service.ts  keyboard-service.ts  launcher-service.ts  mouse-service.ts
client/src/execute/: execute-controller.ts  execute-dto.ts  execute-model.ts  execute-module.ts  launcher-service.ts
client/src/keyboard/: keyboard-dto.ts  (+3 more)
openapi/: index.html
pocs/: test_hotkey.cpp
pocs/mtls/: package.json
server/: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  jest.config.ts  json-schema.json  macros-schema.json  nest-cli.json  package.json  tsconfig.json
server/examples/: config-oly.json  config-ss-2.jsonc  config-ss.json  macros-example.jsonc  sags.json  sags6.json  tyrs.json
server/examples/config/: bael.json  config-oly.json  config-ss-6.jsonc  config-ss-6buff.jsonc  config-ss-8.jsonc  fish-reward-2.jsonc  fish-reward-3.jsonc  fish-reward-ss.jsonc  fish.jsonc  loop-red-gem.jsonc  sags.json  shutdown.jsonc  spam-mouse1.jsonc  trade-0-3.jsonc  trade-1-8.jsonc  trade-10-15.jsonc  type-password.jsonc  tyrs-no-maestro.json  tyrs.2nd.json  tyrs.json  unity-1.jsonc
server/src/: client.ts  config-reader.ts  http-client.ts  index.js  logic.ts  main.ts
server/src/app/: app.module.ts  custom-logger.ts  electron-service.ts  hotkey.service.ts  logic-service.ts
server/src/client/: cert-service.ts  client-module.ts  client-service.ts  dtos.ts  http-client.ts  jwt-service.ts  keys-service.ts  private_key.pem
server/src/config/: config-module.ts  config-reader-service.ts  config-service.ts  configs-path.service.ts  generate-schema.ts  interfaces.ts  types.ts
server/src/config/examples/: bael.json  config-oly.json  config-ss-2.jsonc  config-ss-6.jsonc  elanor.json  fish-reward-2.jsonc  fish-reward-ss.jsonc  fish.jsonc  macros-example.jsonc  macros.jsonc  sags-daily.json  sags.json  trade-1-6.jsonc  trade-1.jsonc  trade-7-10.jsonc  tyrs.2nd.json  variables-example.jsonc
server/src/config/examples/config/: config-ss-6.jsonc  config-ss-6buff.jsonc  config-ss-8.jsonc  fish-reward-2.jsonc  fish-reward-3.jsonc  fish-reward-ss.jsonc  fish.jsonc  sags-daily.json  sags6.json  shutdown.jsonc  trade-0-3.jsonc  trade-1-6.jsonc  trade-1-8.jsonc  trade-10-15.jsonc  trade-4-9.jsonc  tyrs.2nd.json  tyrs.json
server/src/config/types/: cache.ts  commands.ts  macros.ts  schema.ts  shortcut.ts  variables.ts
server/src/dto/: event.ts
server/src/handlers/: command-handler.service.ts  handler-module.ts
server/src/handlers/implementation/: execute-handler.ts  focus-window-handler.ts  key-press-handler.ts  kill-name-handler.ts  kill-pid-handler.ts  left-mouse-click-handler.ts  mouse-click-handler.ts  type-text-handler.ts
server/src/logic/: circular-index.ts  command-processing.service.ts  logic.module.ts  shortcut-processing.service.ts  variable-resolution.service.ts
server/src/logic/commands/: base-command-handler.ts  execute-handler.ts  focus-window-handler.ts  key-press-handler.ts  kill-handler.ts  mouse-click-handler.ts  type-text-handler.ts
server/src/native/: native-model.ts  native-module.ts
server/src/native/linux/: key-names.cc  listen-shortcut.cc  main.cc  modifier-names.cc
server/src/native/linux/headers/: key-names.h  listen-shortcut.h  modifier-names.h
server/src/native/win32/: key-names.cc  keypress.cc  listen-shortcut.cc  main.cc  modifier-names.cc
server/src/native/win32/headers/: key-names.h  listen-shortcut.h  modifier-names.h  window.h
server/src/tests/: logic-service.spec.ts
server/src/tests/mocks/: config-provider.ts
src/: generate-swagger-docs.ts  main.ts  open-api.ts  swagger.ts
src/app/: app-controller.ts  app-dto.ts  app-logger-instance.ts  app-model.ts  app.module.ts  arguments.ts  console-logger.ts  custom-logger.ts  request-id-middleware.ts
src/certificates/: certificate-service.ts  certificates-module.ts
src/execute/: execute-controller.ts  execute-dto.ts  execute-model.ts  execute-module.ts  launcher-service.ts
src/global/: global-model.ts  global-module.ts
src/keyboard/: keyboard-controller.ts  keyboard-dto.ts  keyboard-layout-dto.ts  keyboard-model.ts  keyboard-module.ts  keyboard-router.ts  keyboard-service.ts
src/monitor/: monitor-controller.ts  monitor-dto.ts  monitor-module.ts  monitor-router.ts  monitor-service.ts
src/mouse/: mouse-controller.ts  mouse-dto.ts  mouse-module.ts  mouse-service.ts
src/mtls/: cert-service.ts  mtls-model.ts  mtls.module.ts  tls-service.ts
src/native/: native-model.ts  native-module.ts
src/process/: launcher-service.ts  process-controller.ts  process-dto.ts  process-model.ts  process-module.ts  process-service.ts
src/random/: random-service.ts  random.module.ts
src/utils/: decorators.ts
src/validation/: zod-validator.ts  zod.pipe.ts
src/window/: window-consts.ts  window-controller.ts  window-dto.ts  window-model.ts  window-module.ts  window-service.ts
swagger/: index.html
tests/: app-controller.spec.ts  certificate-service.spec.ts  keyboard-controller.spec.ts  monitor-controller.spec.ts  mouse-controller.spec.ts  native-service.spec.ts  process-controller.spec.ts  test-utils.ts  window-controller.spec.ts
(+127 files in other folders)
